adding style link and pages

--- a/hw5-tables/pages/modrian-table.html
+++ b/hw5-tables/pages/modrian-table.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Main Page</title>
+    <link rel="stylesheet" href="../style.css">
+    <title>Modrian Table</title>
 </head>
 <body>
     
