adding styles and main menu

--- a/hw5-tables/index.html
+++ b/hw5-tables/index.html
@@ -7,6 +7,12 @@
     <title>Main Page</title>
 </head>
 <body>
-    
+    <div class="main-menu-container">
+        <ul class="main-menu">
+            <li><a href="./pages/modrian-table.html">Таблиця Модріана</a></li>
+            <li><a href="./pages/table1.html">Таблиця 1</a></li>
+            <li><a href="./pages/table2.html">Таблиця 2</a></li>
+        </ul>
+    </div>
 </body>
 </html>
