adding table1 and table2

--- a/hw5-tables/pages/table1.html
+++ b/hw5-tables/pages/table1.html
@@ -7,6 +7,24 @@
     <title>Table 1</title>
 </head>
 <body>
-    
+    <div class="container">
+        <table class="w-75">
+          <caption>Table #1</caption>
+          <tr>
+            <td rowspan="3">1-4-7 w=33.33%</td>
+            <td>2</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <td class="h-200" colspan="2">5-6  h=200px
+            </td>
+          </tr>
+          <tr>
+            <td>8</td>
+            <td>9</td>
+          </tr>
+        </table>
+        <span>w of table 75%</span>
+      </div>
 </body>
 </html>
