--- a/hw5-tables/index.html
+++ b/hw5-tables/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main-menu-container">
         <ul class="main-menu">
-            <li><a href="./pages/modrian-table.html">Таблиця Модріана</a></li>
+            <li><a href="./pages/modrian-table.html">Таблиця Мондріана</a></li>
             <li><a href="./pages/table1.html">Таблиця 1</a></li>
             <li><a href="./pages/table2.html">Таблиця 2</a></li>
         </ul>
