--- a/hw5-tables/pages/modrian-table.html
+++ b/hw5-tables/pages/modrian-table.html
@@ -3,10 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
-    <title>Modrian Table</title>
+    <title>Таблиця Мондріана</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f4f4f4;
+        }
+
+        table {
+            border-collapse: collapse;
+            width: 450px;
+            border: 6px solid black;
+            background-color: white;
+        }
+
+        td {
+            border: 6px solid black;
+            font-size: 18px;
+        }
+
+        .yellow { background-color: yellow; }
+        .red { background-color: red; }
+        .black { background-color: black; color: white; }
+        .blue { background-color: blue; color: white; }
+    </style>
 </head>
 <body>
-    
+<table>
+    <tr>
+        <td colspan="2" height="30"></td>
+        <td width="165"></td>
+        <td colspan="2" class="yellow"></td>
+        <td rowspan="4"></td>
+    </tr>
+    <tr>
+        <td width="30" height="60"></td>
+        <td rowspan="2" colspan="2" width="200" class="red"></td>
+        <td colspan="2" height="100" class="yellow"></td>
+    </tr>
+    <tr>
+        <td rowspan="3" height="80"></td>
+        <td height="120" width="75"></td>
+        <td height="120" width="75"></td>
+    </tr>
+    <tr>
+        <td rowspan="2" height="120" class="black"></td>
+        <td height="60"></td>
+        <td colspan="2" height="50"></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td rowspan="2" colspan="2" class="blue"></td>
+        <td rowspan="3" class="red"></td>
+    </tr>
+    <tr>
+        <td rowspan="2" class="yellow" height="90"></td>
+        <td rowspan="2" height="40"></td>
+        <td class="black"></td>
+    </tr>
+    <tr>
+        <td colspan="3"></td>
+    </tr>
+</table>
 </body>
 </html>
