--- a/hw5-tables/pages/table1.html
+++ b/hw5-tables/pages/table1.html
@@ -16,7 +16,7 @@
             <td class="w-33">3</td>
           </tr>
           <tr>
-            <td class="h-200" colspan="2" class="w-33">5-6  h=200px
+            <td class="h-200 w-33" colspan="2">5-6  h=200px
             </td>
           </tr>
           <tr>
