--- a/hw7-block-model/index.html
+++ b/hw7-block-model/index.html
@@ -6,6 +6,14 @@
     <title>Main Page</title>
 </head>
 <body>
-    
+    <ul>
+        <ol><a href="./pages/block-and-inline.html">block-and-inline</a></ol>
+        <ol><a href="./pages/css-properties.html">css-properties</a></ol>
+        <ol><a href="./pages/float-clear.html">float-clear</a></ol>
+        <ol><a href="./pages/page-for-normalize.html">page-for-normalize</a></ol>
+        <ol><a href="./pages/page-for-reset.html">page-for-reset</a></ol>
+        <ol><a href="./pages/position-element.html">position-element</a></ol>
+        <ol><a href="./pages/try-overflow.html">try-overflow</a></ol>
+    </ul>
 </body>
 </html>
