--- a/hw7-block-model/pages/block-and-inline.html
+++ b/hw7-block-model/pages/block-and-inline.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../styles/styles.css">
+    <title>Block&Inline</title>
 </head>
 <body>
-    
+    <div class="page">
+        <h1>Вітаємо на тестовій сторінці</h1>
+        <div class="content__block">Це блоковий елемент (div) з унікальним стилем</div>
+        <div class="content__block">Ще один блоковий елемент з доданим оформленням</div>
+        <p>Цей текст містить <span class="text__highlight">інлайновий елемент (span)</span> усередині абзацу.</p>
+        <p>Ще один приклад використання <span class="text__highlight">інлайнового</span> елемента.</p>
+        <p>А ось <span class="text__background">виділений жовтим</span> текст.</p>
+        <div class="button-group">
+            <span class="button-group__button">Кнопка 1</span>
+            <span class="button-group__button">Кнопка 2</span>
+            <span class="button-group__button">Кнопка 3</span>
+        </div>
+    </div>
 </body>
 </html>
