--- a/hw7-block-model/pages/page-for-normalize.html
+++ b/hw7-block-model/pages/page-for-normalize.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Normalize CSS</title>
+    <link rel="stylesheet" href="../styles/normalize.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        h1 {
+            color: blue;
+        }
+        p {
+            font-size: 18px;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Експеримент з Normalize.css</h1>
+    <p>Normalize.css не скидає стилі повністю, а лише робить їх однорідними в різних браузерах. 
+    Наприклад, заголовки, параграфи та кнопки зберігають свої стандартні відступи та розміри.</p>
 </body>
 </html>
