--- a/hw7-block-model/pages/page-for-reset.html
+++ b/hw7-block-model/pages/page-for-reset.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reset CSS</title>
+    <link rel="stylesheet" href="../styles/reset.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        h1 {
+            color: red;
+        }
+        p {
+            font-size: 18px;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Експеримент з Reset.css</h1>
+    <p>Reset.css повністю обнуляє всі стилі: заголовки, параграфи, списки та інші елементи втрачають відступи, розміри та стандартні оформлення. 
+    Це дає змогу задавати власні стилі з нуля.</p>
 </body>
 </html>
